# ThetisOld

./: .gitignore  CMakeLists.txt  FindJulia.cmake  LICENSE  Makefile  Matrix.cpp  Matrix.cu  Matrix.h  README.md  TestAgency.cu  TestAgency.impl.h  TestJulia.cpp  TestMatrix.cpp  TestMatrix.cu  TestMatrix.h  TestThetis.cpp  TestThetis.cu  TestUtils.cpp  Thetis.h  ThetisTest.h  build-and-test.sh  build_swift.sh  configure  rbenv.sh  runThetis  runThetis.swift
.github/workflows/: c-cpp.yml  release.yml
testData/: beerJournal.xml
thetis/: matrix.h  module.modulemap
